feat: call for papers form

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
           <li><strong>Data:</strong> 14 lutego 2025</li>
           <li><strong>Godzina:</strong> TBA CET</li>
-          <li><strong>Miejsce:</strong> TBA</li>
+          <li><strong>Miejsce:</strong> TBA, Politechnika Wrocławska</li>
         </ul>
       </section>
       <section class="logo">
@@ -83,7 +83,7 @@
       </p>
       <div class="cta-button">
         <button>
-          <a href="#" target="_blank" rel="noopener noreferrer">Zgłoś temat</a>
+          <a href="https://forms.gle/ZDCzS418uX7B4Vds8" target="_blank" rel="noopener noreferrer">Zgłoś temat</a>
         </button>
       </div>
     </section>
