feat: time, location

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <h2>📅 Szczegóły wydarzenia</h2>
         <ul>
           <li><strong>Data:</strong> 14 lutego 2025</li>
-          <li><strong>Godzina:</strong> TBA CET</li>
-          <li><strong>Miejsce:</strong> TBA, Politechnika Wrocławska</li>
+          <li><strong>Godzina:</strong> 18:00 CET</li>
+          <li><strong>Miejsce:</strong> sala 20, budynek C-3, Politechnika Wrocławska</li>
         </ul>
       </section>
       <section class="logo">
