feat: fancy descriptions

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
           </div>
           <div class="member-details">
             <strong>Michał Korczak</strong>
-            Organizator
+            Ark UI Maintainer | meet.js
+            <br />Sesja Linuksowa
             <div class="social-icons">
               <!-- Homepage -->
               <a href="https://omikor.in" target="_blank" rel="noopener noreferrer">
@@ -183,14 +184,15 @@
           </div>
         </div>
 
-        <!-- Member with long name -->
+        <!-- Member 2 -->
         <div class="team-member">
           <div class="member-photo">
             <img width="180" height="180" src="/public/team/asi.png" alt="logo ASI" />
           </div>
           <div class="member-details">
             <strong>Akademickie Stowarzyszenie Informatyczne</strong>
-            Społeczność Open Source
+            25-letnia Społeczność FOSS
+            <br />Twórcy Sesja Linuksowa
             <div class="social-icons">
               <!-- Homepage -->
               <a href="https://asi.wroclaw.pl/" target="_blank" rel="noopener noreferrer">
