feat: registration link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </p>
       <div class="cta-button">
         <button>
-          <a href="#" target="_blank" rel="noopener noreferrer">Zarejestruj się</a>
+          <a href="https://app.evenea.pl/event/ilfs-day-2025-wroclaw/?source=www" target="_blank" rel="noopener noreferrer">Zarejestruj się</a>
         </button>
       </div>
       <p class="social-promo">
