--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <!-- Member 2 -->
         <div class="team-member">
           <div class="member-photo">
-            <img width="180" height="180" src="/public/team/asi.png" alt="logo ASI" />
+            <img width="160" height="160" src="/public/team/asi.png" alt="logo ASI" />
           </div>
           <div class="member-details">
             <strong>Akademickie Stowarzyszenie Informatyczne</strong>
@@ -198,6 +198,7 @@
               <a href="https://asi.wroclaw.pl/" target="_blank" rel="noopener noreferrer">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <title>Strona</title>
                   <circle cx="12" cy="12" r="10" />
                   <path d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20" />
                   <path d="M2 12h20" />
@@ -246,7 +247,7 @@
         <!-- Member 3 -->
         <div class="team-member">
           <div class="member-photo">
-            <img class="blank" width="140" height="140" src="/public/team/hswro.png" alt="logo Hackerspace Wrocław" />
+            <img class="blank" width="130" height="130" src="/public/team/hswro.png" alt="logo Hackerspace Wrocław" />
           </div>
           <div class="member-details">
             <strong>Hackerspace Wrocław</strong>
@@ -256,6 +257,7 @@
               <a href="https://www.hswro.org/" target="_blank" rel="noopener noreferrer">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <title>Strona</title>
                   <circle cx="12" cy="12" r="10" />
                   <path d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20" />
                   <path d="M2 12h20" />
@@ -289,6 +291,51 @@
                 </svg>
               </a>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="team">
+      <h2>📢 Partnerzy</h2>
+      <div class="grid team-members">
+
+        <!-- Member 1 -->
+        <div class="team-member">
+          <a href="https://fsfe.org" target="_blank" rel="noopener noreferrer">
+            <div class="member-photo">
+              <img class="blank" width="130" height="130" src="/public/partners/fsfe.png"
+                alt="logo Free Software Foundation Europe" />
+            </div>
+          </a>
+          <div class="member-details">
+            <strong>Free Software Foundation Europe</strong>
+          </div>
+        </div>
+
+        <!-- Member 2 -->
+        <div class="team-member">
+          <div class="member-photo">
+            <a href="https://wit.pwr.edu.pl" target="_blank" rel="noopener noreferrer">
+              <img class="blank" width="130" height="130" src="/public/partners/wit.png"
+                alt="logo Wydział Informatyki i Telekomunikacji" />
+            </a>
+          </div>
+          <div class="member-details">
+            <strong>Wydział Informatyki i Telekomunikacji</strong>
+          </div>
+        </div>
+
+        <!-- Member 3 -->
+        <div class="team-member">
+          <div class="member-photo">
+            <a href="https://linux.org.pl" target="_blank" rel="noopener noreferrer">
+              <img class="blank" width="130" height="130" src="/public/partners/plug.png"
+                alt="logo Polska Grupa Użytkowników Linuxa" />
+            </a>
+          </div>
+          <div class="member-details">
+            <strong>Polska Grupa Użytkowników Linuxa</strong>
           </div>
         </div>
       </div>
