--- a/index.html
+++ b/index.html
@@ -92,11 +92,8 @@
       <div>
         <h2>🗓️ Program</h2>
         <ul>
-          <li><strong>aa:bb:</strong> Powitanie i wprowadzenie</li>
-          <li><strong>cc:dd:</strong> Wykład: "Wprowadzenie do Wolnego Oprogramowania"</li>
-          <li><strong>ee:ff:</strong> Warsztat: Zgłoś się!</li>
-          <li><strong>ff:ee:</strong> Panel dyskusyjny: Tematy wymyślimy na miejscu</li>
-          <li><strong>dd:cc:</strong> Lunch i networking</li>
+          <li><strong>Michał Korczak</strong> &ndash; Wprowadzenie do Wolnego Oprogramowania</li>
+          <li><strong>Krzysztof Krysiński</strong> &ndash; Skia - API na które patrzy każdy, codziennie</li>
         </ul>
       </div>
     </section>
@@ -300,7 +297,7 @@
       <h2>📢 Partnerzy</h2>
       <div class="grid team-members">
 
-        <!-- Member 1 -->
+        <!-- Partner 1 -->
         <div class="team-member">
           <a href="https://fsfe.org" target="_blank" rel="noopener noreferrer">
             <div class="member-photo">
@@ -313,7 +310,7 @@
           </div>
         </div>
 
-        <!-- Member 2 -->
+        <!-- Partner 2 -->
         <div class="team-member">
           <div class="member-photo">
             <a href="https://wit.pwr.edu.pl" target="_blank" rel="noopener noreferrer">
@@ -326,7 +323,7 @@
           </div>
         </div>
 
-        <!-- Member 3 -->
+        <!-- Partner 3 -->
         <div class="team-member">
           <div class="member-photo">
             <a href="https://linux.org.pl" target="_blank" rel="noopener noreferrer">
