--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         <ul>
           <li><strong>Michał Korczak</strong> &ndash; Wprowadzenie do Wolnego Oprogramowania</li>
           <li><strong>Krzysztof Krysiński</strong> &ndash; Skia - API na które patrzy każdy, codziennie</li>
+          <li><strong>Miłosz Kłosowicz</strong> &ndash; FOSS wbudowane (albo zmodowane) w sprzęcie elektronicznym
+            powszechnego użytku</li>
         </ul>
       </div>
     </section>
